[tool.poetry]
name = "youcanpay"
version = "0.1.0"
description = "Wrapper arround YouCanPay gateway"
authors = ["Younes Oumakhou <younesoumakhousudo@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/YounesOMK/youcanpay_python"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
black = "^23.11.0"
types-requests = "^2.31.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
